--- a/angular-demo/src/app/form-user-message/form-user-message.component.html
+++ b/angular-demo/src/app/form-user-message/form-user-message.component.html
@@ -1,24 +1,1 @@
-<h2>User Message</h2>
-<p>user message form</p>
-<div class="card-container">
-  <button class="card card-small" (click)="refresh()" tabindex="0"><span>Refresh</span></button>
-  <button class="card card-small" (click)="new()" tabindex="1"><span>Add New</span></button>
-  <button class="card card-small" (click)="save()" tabindex="2"><span>Save</span></button>
-  <button class="card card-small" (click)="close()" tabindex="4"><span>Close</span></button>
-</div>
-
-<div class="form">  
-  <div class="form-row, alter-content">
-    <label for="id">id:</label>
-    <input type="text" id="id" name="id" value={{id}} readonly><br><br>
-  </div>
-  <div class="form-row, alter-content">
-    <label for="userAccountId">user account id:</label>
-    <input type="text" id="userAccountId" name="userAccountId" value={{record.id}} (change)="change('userAccountId', $event)"><br><br>
-  </div>
-  <div class="form-row, alter-content">
-    <label for="message">message:</label>
-    <input type="text" id="message" name="message" value={{record.message}} (change)="change('message', $event)"><br><br>
-  </div>
-</div>
-<router-outlet></router-outlet>
+<p>form-user-message works!</p>
