Improved Event Handling

--- a/angular-demo/src/app/form-user-message/form-user-message.component.html
+++ b/angular-demo/src/app/form-user-message/form-user-message.component.html
@@ -1,1 +1,26 @@
-<p>form-user-message works!</p>
+<div class="form-area">
+    <h2>User Account</h2>
+    <p>user account form</p>
+    <div class="btn-group" id='form-user-account-menu'>
+        <button class="btn btn-primary" (click)="new()" tabindex="0"><span>Add New</span></button>
+        <button class="btn btn-primary" (click)="save()" tabindex="1"><span>Save</span></button>
+        <button class="btn btn-primary" (click)="refresh()" tabindex="2"><span>Refresh</span></button>
+        <button class="btn btn-secondary" (click)="delete()" tabindex="3"><span>Delete</span></button>
+        <button class="btn btn-secondary" (click)="close()" tabindex="4"><span>Close</span></button>
+    </div>
+
+    <div class="form">
+      <div class="form-group">
+        <label for="id">id:</label>
+        <input type="text" class="form-control" id="id" name="id" value={{record.id}} readonly><br><br>
+      </div>
+      <div class="form-group">
+        <label for="userAccount.id">user account:</label>
+        <input type="text" class="form-control" id="userAccount.id" name="userAccount.id" value={{record.userAccount?.id}} (change)="change('userAccount.id', $event)"><br><br>
+      </div>
+      <div class="form-group">
+        <label for="lastName">message:</label>
+        <input type="text" class="form-control" id="lastName" name="lastName" value={{record.message}} (change)="change('message', $event)"><br><br>
+      </div>
+    </div>
+</div>
