User Message Event Handling Updates

--- a/angular-demo/src/app/form-user-account/form-user-account.component.html
+++ b/angular-demo/src/app/form-user-account/form-user-account.component.html
@@ -9,7 +9,7 @@
         <button class="btn btn-secondary" (click)="close()" tabindex="4"><span>Close</span></button>
     </div>
 
-    <div class="form">
+    <div class="highlight">
       <div class="form-group">
         <label for="id">id:</label>
         <input type="text" class="form-control" id="id" name="id" value={{record.id}} readonly><br><br>
