--- a/angular-demo/src/app/form-user-account/form-user-account.component.html
+++ b/angular-demo/src/app/form-user-account/form-user-account.component.html
@@ -10,17 +10,18 @@
     </div>
 
     <div class="highlight">
+      <br>
       <div class="form-group">
         <label for="id">id:</label>
-        <input type="text" class="form-control" id="id" name="id" value={{record.id}} readonly><br><br>
+        <input type="text" class="form-control" id="id" name="id" value={{record.id}} readonly><br>
       </div>
       <div class="form-group">
         <label for="firstName">first name:</label>
-        <input type="text" class="form-control" id="firstName" name="firstName" value={{record.firstName}} (change)="change('firstName', $event)"><br><br>
+        <input type="text" class="form-control" id="firstName" name="firstName" value={{record.firstName}} (change)="change('firstName', $event)"><br>
       </div>
       <div class="form-group">
         <label for="lastName">last name:</label>
-        <input type="text" class="form-control" id="lastName" name="lastName" value={{record.lastName}} (change)="change('lastName', $event)"><br><br>
+        <input type="text" class="form-control" id="lastName" name="lastName" value={{record.lastName}} (change)="change('lastName', $event)"><br>
       </div>
     </div>
 </div>
