--- a/angular-demo/src/app/form-user-message/form-user-message.component.html
+++ b/angular-demo/src/app/form-user-message/form-user-message.component.html
@@ -1,7 +1,7 @@
 <div class="form-area">
-    <h2>User Account</h2>
-    <p>user account form</p>
-    <div class="btn-group" id='form-user-account-menu'>
+    <h2>User Message</h2>
+    <p>user message form</p>
+    <div class="btn-group" id='form-user-message-menu'>
         <button class="btn btn-primary" (click)="new()" tabindex="0"><span>Add New</span></button>
         <button class="btn btn-primary" (click)="save()" tabindex="1"><span>Save</span></button>
         <button class="btn btn-primary" (click)="refresh()" tabindex="2"><span>Refresh</span></button>
