--- a/angular-demo/src/app/app.component.html
+++ b/angular-demo/src/app/app.component.html
@@ -1,13 +1,21 @@
 <input type="hidden" #selection value={{selected}}>
 <div class="container" role="main">
   <div class="row">
-    <div class="form-area" *ngIf="selection.value === 'app-root'">
-      <h2>Main Menu</h2>
-      <p>Main menu for User Manager App</p>
-      <div class="btn-group">
-        <button class="btn btn-primary" (click)="select('app-table-user-account');" tabindex="0"><span>User Accounts</span></button>
-        <button class="btn btn-primary" (click)="select('app-table-user-message');" tabindex="1"><span>User Messages</span></button>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">User Manager App</a>
+        </div>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item active"><a class="nav-link" href="#" (click)="select('app-root');">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#" (click)="select('app-table-user-account');">User Accounts</a></li>
+          <li class="nav-item"><a class="nav-link" href="#" (click)="select('app-table-user-message');">User Messages</a></li>
+        </ul>
       </div>
+    </nav>
+    <div class="form-area" *ngIf="selection.value === 'app-root'">
+      <h2>Home</h2>
+      <p>Home Page for User Manager App</p>
     </div>
     <app-table-user-account (sendNotification)="getNotification($event)" *ngIf="selection.value === 'app-table-user-account'"></app-table-user-account>
     <app-table-user-message (sendNotification)="getNotification($event)" *ngIf="selection.value === 'app-table-user-message'"></app-table-user-message>
