--- a/angular-demo/src/app/table-user-account/table-user-account.component.html
+++ b/angular-demo/src/app/table-user-account/table-user-account.component.html
@@ -26,13 +26,7 @@
                     <td>{{record.firstName}}</td>
                     <td>{{record.lastName}}</td>
                     <td>
-                        <div *ngIf="record.active==true; then thenBlock else elseBlock"></div>
-                        <ng-template #thenBlock>
-                            <input type="checkbox" class="form-check-input" id="active" name="active" checked readonly>
-                        </ng-template>
-                        <ng-template #elseBlock>
-                            <input type="checkbox" class="form-check-input" id="active" name="active" readonly>
-                        </ng-template>
+                        <input type="checkbox" class="form-check-input" id="active" name="active" [checked]="record.active" disabled readonly>
                     </td>
                     <td><button class="btn btn-primary" (click)="select(record.id);" id="{{record.id}}"><span>edit</span></button></td>
                     <td><button class="btn btn-secondary" (click)="delete(record.id!);" id="{{record.id}}"><span>delete</span></button></td>
