--- a/angular-demo/src/app/app.component.html
+++ b/angular-demo/src/app/app.component.html
@@ -6,18 +6,26 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="#">User Manager App</a>
         </div>
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item active"><a class="nav-link" href="#" (click)="select('app-root');">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#" (click)="select('app-table-user-account');">User Accounts</a></li>
-          <li class="nav-item"><a class="nav-link" href="#" (click)="select('app-table-user-message');">User Messages</a></li>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="navbar_home" role="tablist">
+          <li class="nav-item" role="presentation"><a class="nav-link active" id="link_home" href="#" data-bs-toggle="tab" data-bs-target="#tab_home" aria-controls="home" aria-selected="true">Home</a></li>
+          <li class="nav-item" role="presentation"><a class="nav-link" id="link_user-account" href="#" data-bs-toggle="tab" data-bs-target="#tab_user-account" aria-controls="user-account" aria-selected="false">User Accounts</a></li>
+          <li class="nav-item" role="presentation"><a class="nav-link" id="link_user-message" href="#" data-bs-toggle="tab" data-bs-target="#tab_user-message" aria-controls="user-message" aria-selected="false">User Messages</a></li>
         </ul>
       </div>
     </nav>
-    <div class="form-area" *ngIf="selection.value === 'app-root'">
-      <h2>Home</h2>
-      <p>Home Page for User Manager App</p>
+  <div class="tab-content" id="tab_content">
+    <div class="tab-pane fade show active" id="tab_home" role="tabpanel">
+      <div class="form-area">
+        <h2>Home</h2>
+        <p>Home Page for User Manager App</p>
+      </div>
     </div>
-    <app-table-user-account (sendNotification)="getNotification($event)" *ngIf="selection.value === 'app-table-user-account'"></app-table-user-account>
-    <app-table-user-message (sendNotification)="getNotification($event)" *ngIf="selection.value === 'app-table-user-message'"></app-table-user-message>
+    <div class="tab-pane fade" id="tab_user-account" role="tabpanel">
+      <app-table-user-account></app-table-user-account>
+    </div>
+    <div class="tab-pane fade" id="tab_user-message" role="tabpanel">
+      <app-table-user-message></app-table-user-message>
+    </div>
   </div>
 <router-outlet></router-outlet>
+</div>
