--- a/angular-demo/src/app/form-user-account/form-user-account.component.html
+++ b/angular-demo/src/app/form-user-account/form-user-account.component.html
@@ -8,7 +8,13 @@
         <button class="btn btn-secondary" (click)="delete()" tabindex="3"><span>Delete</span></button>
         <button class="btn btn-secondary" (click)="close()" tabindex="4"><span>Close</span></button>
     </div>
-
+    <!-- TOAST! -->
+    <div style="position: absolute; bottom: 0; right: 0;">
+      <div class="container">
+        <ngb-toast *ngIf="showMessage" [autohide]="true" id="message" name="message" (hidden)="showMessage=false" (click)="showMessage=false">{{message}}</ngb-toast>
+        <br/>
+      </div>
+    </div>
     <div class="highlight">
       <br>
       <div class="form-group">
@@ -17,11 +23,11 @@
       </div>
       <div class="form-group">
         <label for="firstName">first name:</label>
-        <input type="text" class="form-control" id="firstName" name="firstName" value={{record.firstName}} (change)="change('firstName', $event)"><br>
+        <input type="text" class="form-control" id="firstName" name="firstName" value={{record.firstName}} (change)="change('firstName', $event)"><br/>
       </div>
       <div class="form-group">
         <label for="lastName">last name:</label>
-        <input type="text" class="form-control" id="lastName" name="lastName" value={{record.lastName}} (change)="change('lastName', $event)"><br>
+        <input type="text" class="form-control" id="lastName" name="lastName" value={{record.lastName}} (change)="change('lastName', $event)"><br/>
       </div>
       <div class="form-check">
         <input type="checkbox" class="form-check-input" id="active" name="active" [checked]="record.active" (change)="change('active', $event)">
